<resources>
    <string name="app_name">BulletinBoard</string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_inter_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="price_rub">%1$s ₽</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <!-- Menu Drawer Strings -->
    <string name="ads">Объявления</string>
    <string name="all_ads">Все объявления</string>
    <string name="my_ads">Мои объявления</string>
    <string name="fav_ads">Избранное</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>
    <string name="cat2">Аккаунт</string>
    <string name="ac_sign_in">Вход</string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_sign_out">Выйти</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Войдите или зарегистрируйтесь</string>

    <!-- Main Act -->


    <!-- Sign Dialog Strings -->
    <string name="email_reset_password_was_sent">На почту было выслано письмо для восстановления пароля</string>
    <string name="email_reset_message">Для восстановления пароля введите свой email</string>
    <string name="email_hint">example@mail.com</string>
    <string name="password_hint">password</string>
    <string name="sign_up_act">Зарегистрироваться</string>
    <string name="sign_in_act">Войти</string>
    <string name="forget_pass_act">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="sign_in_success">Вы успешно вошли в аккаунт</string>
    <string name="send_verification_done">На вашу почту была отправлена ссылка для подтверждения аккаунта</string>
    <string name="send_verification_error">Не удалось отправить e-mail </string>
    <string name="link_done">Google-аккаунт и e-mail успешно связаны</string>
    <string name="guest">Гость</string>

    <!-- Edit Activity -->
    <string name="title">Заголовок</string>
    <string name="select_title">*Выберите заголовок</string>
    <string name="select_country">*Выберите страну</string>
    <string name="select_city">*Выберите город</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="tel">Телефон</string>
    <string name="select_tel">*Введите номер</string>
    <string name="email">Email</string>
    <string name="with_send">С отправкой</string>
    <string name="category">Категория</string>
    <string name="select_category">*Выберите категорию</string>
    <string name="price">Цена</string>
    <string name="select_price">*Укажите цену</string>
    <string name="description">Описание</string>
    <string name="select_description">Введите описание</string>
    <string name="ready_button">Готово</string>

    <!-- Filter Activity -->
    <string name="apply">Применить</string>
    <string name="empty">empty</string>


</resources>